#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([sign], [0.3.2.0], [yuriping@sohu.com])
AC_CONFIG_SRCDIR([sign.c])
#AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(sign, 0.3.2.0)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_REALLOC
AC_CHECK_FUNCS([bzero gettimeofday strerror])

AC_OUTPUT(Makefile)
